@@ -1,3 +1,12 @@
+2006-11-07  Paul J Stevens <paul@nfg.nl>
+
+	* db.c:
+	make allocation fail louder in db_icheck_envelope
+	* modules/sortsieve.c:
+	invert result logic in sort_process
+	* check_dbmail_util.c:
+	make allocation fail louder in db_icheck_envelope
+
 2006-11-06  Aaron Stone  <aaron@serendipity.cx>
 
 	* dbmail.h.in:
